<resources>
    <string name="app_name">Look4</string>

    <string name="welcome_phone_number_warning">Your phone number is not valid</string>

    <string name="main_offline_mode">Offline</string>
    <string name="main_online_mode">Online</string>
    <string name="main_advertising_has_started">You are online</string>
    <string name="main_advertising_has_stopped">You are offline</string>
    <string name="main_advertising_title">You are available to be found</string>
    <string name="main_man">Man</string>
    <string name="main_woman">Woman</string>
    <string name="main_all">All</string>
    <string name="main_gender_female">Female</string>
    <string name="main_gender_male">Male</string>

    <string name="settings_title">Settings</string>

    <string name="contacts_title">Contacts</string>

    <string name="look_found_label">Found: 1/1</string>
    <string name="look_yes">Yes</string>
    <string name="look_no">No</string>
    <string name="look_searching_in_progress">Searching …</string>
    <string name="look_no_found">Oops… \nnobody \nhere </string>
    <string name="look_talk_in_person">Try to talk \n in person \n or</string>
    <string name="look_search">Search</string>
    <string name="look_search_again">Search again</string>
    <string name="look_countdown_default_value" translatable="false">1</string>
    <string name="look_you_received_phone_number">Your new contact has been saved!</string>
    <string name="look_view">View</string>
    <string name="look_pending">Waiting …</string>
    <string name="look_disconnect_warning_title">Are you sure you want to disconnect?</string>
    <string name="look_disconnect_warning">You will not get a contact back from your partner</string>

    <string name="look_error_connection_is_lost">Connection has been lost. Write first!</string>
    <string name="look_error_connection_is_lost_try_again">Connection has been lost. Try again later</string>
    <string name="look_error_scanning_can_not_be_started">Scanning can not be started. Try again later</string>
    <string name="look_error_disconnected">You has been disconnected</string>
    <string name="look_error_failed">Connected attempt failed</string>
    <string name="look_error_rejected">Connection attempt was rejected</string>

    <string name="profile_edit_title">Profile</string>
    <string name="settings_faq" translatable="false">FAQ</string>
    <string name="settings_remove_ad">Remove Ad</string>
    <string name="settings_about_us">About Us</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_version" translatable="false">Look4 v%1$s</string>
    <string name="settings_debug_version" translatable="false">Look4 DEBUG v%1$s</string>

    <string name="contacts_placeholder">Nothing so far</string>
    <string name="contacts_copied_to_clipboard">Copied to clipboard</string>
    <string name="profile_edit_photo">Photo</string>
    <string name="profile_edit_enter_your_name">Enter your name</string>
    <string name="profile_edit_enter_your_phone_number">Enter your phone number</string>
    <string name="profile_edit_save">Save</string>
    <string name="welcome_submit">Submit</string>
    <string name="welcome_processinng_image_error">Error while processing your photo</string>

    <string name="about_us_description">Igor Artamonov – idea, concept, design and marketing\nEmail: artamonov.igor@gmail.com\nAndrii Artamonov - Android Developer\nLinkedIn: https://www.linkedin.com/in/andrii-artamonov/\nEmail: artamonov06@gmail.com\n© 2020&#8211;2021 Igor Artamonov, Andrii Artamonov, Look4</string>

    <string name="error_general">An error occurred. Please, try again</string>
    <string name="error_blank_fields">Please, do not leave fields blank</string>
    <string name="error_permissions_are_not_granted_for_discovering">You need to grant the permission to start discovering</string>
    <string name="error_permissions_are_not_granted_for_setting_new_picture">You need to grant us the permission to read your profile picture</string>

    <string name="base_check_new_request">You got new contact request! Check out your notification</string>

    <string name="service_new_request">You have received a contact request</string>

    <string name="network_error_unknown">No Internet connection</string>

    <string name="faq_accept">OK</string>
    <string name="faq_link">file:///android_asset/faq_eng.html</string>
    <string name="splash_faq_link">file:///android_asset/splash_faq_eng.html</string>
    <string name="privacy_policy_link" translatable="false">file:///android_asset/privacy_policy.html</string>

</resources>
